# causal-ml-decision-making

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  discovery_benchmark.yaml  failure_mode_benchmark.yaml  failure_mode_mini.yaml  policy_benchmark.yaml  uplift_benchmark.yaml
data/bundled/: lalonde.csv
notebooks/: 01_synthetic_dgp_walkthrough.ipynb  02_uplift_benchmark.ipynb  03_policy_offline_eval.ipynb  04_causal_discovery.ipynb
paper/: outline.md  related_work.md
paper/figures/: README.md
scripts/: run_benchmark.py  run_failure_mode_benchmark.py
src/causal_ml/: __init__.py
src/causal_ml/data/: __init__.py  bandit_dgp.py  base.py  dag_dgp.py  ihdp_dgp.py  paths.py  real_datasets.py  synthetic.py  uplift_dgp.py
src/causal_ml/discovery/: __init__.py  metrics.py  notears.py  pcmci.py
src/causal_ml/evaluation/: __init__.py  failure_mode.py  plots.py  report.py  runner.py
src/causal_ml/policy/: __init__.py  evaluation.py  learning.py  simulation.py
src/causal_ml/sensitivity/: __init__.py  evalue.py  placebo.py  rosenbaum.py
src/causal_ml/uplift/: __init__.py  doubly_robust.py  interval_estimators.py  meta_learners.py  metrics.py  propensity.py
src/causal_ml/utils/: __init__.py  crossfit.py  seed.py
tests/: test_benchmark_grid.py  test_dgp_identifiability.py  test_discovery.py  test_discovery_recovery.py  test_failure_mode_dgp.py  test_meta_learners.py  test_policy.py  test_policy_unbiasedness.py  test_real_datasets.py  test_sensitivity.py  test_uplift_pehe.py
