[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-ml"
version = "0.1.0"
description = "Reproducible causal ML benchmarks: uplift estimation, offline policy learning, and causal discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tigramite>=5.2",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
sensitivity = []
real_datasets = []
paper = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
